# crkg-schema

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  schema-proposal.md
.github/workflows/: ci.yml  release.yml
docs/: BRANCH_PROTECTION.md  DEV_SETUP.md
emitted/cypher/: core.cypher  epidemiology.cypher  ethnobotany.cypher  formulary.cypher
emitted/json-schema/: crkg.json
emitted/mermaid/: core.mmd  epidemiology.mmd  ethnobotany.mmd  formulary.mmd
emitted/pydantic/: models.py
schema/: crkg.yaml
scripts/: emit.py
scripts/emitters/: __init__.py  cypher.py  mermaid.py
src/crkg_schema/: __init__.py
tests/: test_emission_parity.py  test_fixtures_invalid.py  test_fixtures_valid.py  test_schema_valid.py
