[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crkg-schema"
dynamic = ["version"]
description = "Clinical Reasoning Knowledge Graph schema (LinkML)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [
    { name = "Kresna Sucandra", email = "kresna@crkg-schema.dev" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "linkml>=1.8,<2.0",
    "pytest>=8.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/balinesthesia/crkg-schema"
Repository = "https://github.com/balinesthesia/crkg-schema"

[tool.hatch.version]
path = "src/crkg_schema/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["crkg_schema"]

[tool.hatch.build.targets.wheel.force-include]
"schema/" = "crkg_schema/schema"
"emitted/" = "crkg_schema/emitted"
"fixtures/" = "crkg_schema/fixtures"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["emitted/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

